# face-attributes

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml  requirements.txt  test_pipeline.py  test_video.py  test_video_thread.py
.github/: CODE_OF_CONDUCT.md
.github/workflows/: code_quality.yaml
app/api/routes/: face_rcg.py
app/common/utils/: file.py  image.py
app/core/: config.py
app/interface/: __init__.py  service.py
app/modules/: __init__.py  drawing.py
app/modules/face_detect/: insightface.py
app/modules/human_detect/: person_detection.py
app/modules/tracking/: ocsort_tracker.py
app/test/: test_inference.py  test_video.py  test_video_thread.py
app/test/unittest/: test_inference.py  test_media_pipe.py  test_video_thread.py
notebooks/: insightface.ipynb  yolo.ipynb
