[project]
name = "face-recognitions"
version = "0.1.0"
description = "An experimental lab for face-recognition"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boxmot>=11.0.6",
    "fastapi[standard]>=0.115.6",
    "mediapipe>=0.10.20",
    "pipreqs>=0.5.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
    "ultralytics>=8.3.53",
]
